Fixed navbar-brand alignment for small screens

--- a/src/browser-client/style.css
+++ b/src/browser-client/style.css
@@ -12,7 +12,7 @@
  *  ideas, let me know :-)
  *
  *                                                      ~~ (c) SRW, 29 Oct 2012
- *                                                  ~~ last updated 26 Oct 2013
+ *                                                  ~~ last updated 01 Dec 2013
  */
 
 @media all {
@@ -72,6 +72,19 @@
 
     .lead {
         margin-top: 20px;
+    }
+
+}
+
+@media (max-width: 767px) {
+
+ /* We are using the navbar-brand as a dropdown instead of as a link, which is
+  * not supported in Bootstrap 3.0.2. Everything looks fine on large screens,
+  * and this rule indents the brand correctly so that it aligns with the left
+  * edge of the body for small screens. */
+
+    .navbar-brand {
+        margin-left: 15px;
     }
 
 }
